[package]
name = "farmer-school-bevy"
version = "1.0.0"
edition = "2021"

[dependencies]
bevy = "0.13.2" 
rand = "0.8"
strum = "0.24.1"
strum_macros = "0.24.3"
bevy_audio = "0.11"

[build]
jobs = 32

[dev-dependencies]
bevy_test = "0.0.1"

[profile.release]
lto = "fat"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
incremental = true
opt-level = 0
debug = true
lto = "off"
codegen-units = 256

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=lld"]-Ztimings

